Remove reflection from YAML parser detection (#129)
Signed-off-by: Michael Edgar <michael@xlate.io>